# MariaDB4p

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: auto_ci.yml  python-app.yml
.github/workflows/: auto_ci.yml
MariaDB4p/: __init__.py  check_jdk.py  download_jars.py  mariadb.py  mariadb_wrapper.py  pom.xml
mariadb4j_jars/: README.MD
notebooks/: demo_mariadb.ipynb
tests/: test_download_jars.py  test_mariadb.ipynb  test_mariadb4y.py
