[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MariaDB4p"
dynamic = ["dependencies","version"]
keywords = ['MariaDB', 'database', 'wrapper', 'embedded']
authors = [{name = "Jianlin", email="jianlinshi.cn@gmail.com"}]
description = "A Python wrapper for MariaDB4j"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest", "PyMySQL"]

[project.urls]
Homepage = "https://github.com/jianlins/MariaDB4p"

[tool.setuptools]
packages = ["MariaDB4p"]

[tool.setuptools.package-data]
MariaDB4p = ["*.config", "*.xml"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "MariaDB4p.__version__" }

